# oil-spill-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: run.cpp
src/config/: config.json  config_test.json
src/fluids/: fluids_solver.cpp  fluids_solver.h
src/parameters/: parameters.cpp  parameters.h  simulation_parameters.cpp  simulation_parameters.h
src/simulation/camera/: camera.cpp  camera.h
src/simulation/helper/: open_gl_helper.cpp  open_gl_helper.h
src/simulation/render/: fluids_window.cpp  fluids_window.h  window.cpp  window.h
src/test/: param_output.txt  simulation.py  viz_tools.py
